2009-10-March  Maggiali Marco <marco.maggiali@iit.t>
	* fixed bug in the i2t
	* added 0x0155 for brake_setup and future features	 
	* Current build 24.
2009-19-March  Maggiali Marco <marco.maggiali@iit.t>
	* MIN_DUTY at 8. It was 14, but it was too high and the motor tend to move . 
	* Current build 25.	
2009-25-March  Maggiali Marco <marco.maggiali@iit.t>
	* Added control for the receiving of the PID values before enabling the PWM.
    * Current build 26.
	
2009-25-March  Maggiali Marco <marco.maggiali@iit.t>
	* PWM MIN_DUTY is 6. A motor in the legs joint 2 was still moving a little bit in a certain position.
	* The PWM STEP is 10. The motor response is faster then before. There will be an increment of this value after more accurate tests.
    * Current build 27.
2009-xx-xx  Maggiali Marco <marco.maggiali@iit.t>
	* Missing
      * Current build 28.
	
2009-21-May  Francesco Nori <iron@liralab.it>
	* Version 0x0152 bug fixed.
	* Now PWM is coupled after its computation.     
	* Current build 29.
	
2009-31-July  Marco Randazzo <marco.randazzo@iit.it>
	* Fixed GetControlMode message on 2BLL / 4DC.

2009-20-October  Marco Maggiali <marco.maggiali@iit.it>
	* Added MODE_OPENLOOP =0x50. TO BE TESTED 
	* Current build 31.	

2009-13-December  iron <francesco.nori@iit.it>
	* Version 0x0153 now decouples also the duty cycles. 
	* Includes a tentative for fixing a possible delay (4ms)
	on the trasmission of positions in version 0x0153 and 0x0173.
	* Current build 32.	
	
2009-28-December  Marco Maggiali <marco.maggiali@iit.it>
	* Version 0x0157 for joints 2 and 3 of the shoulder for icub V1.1. 
	* Current build 33.

2010-11-January  Francesco Nori <iron@liralab.it>
	* Added "if" conditions: do not update position if abs_encoder fails.
	* Checks timeout on the presence of coupled information. 
	* Current build 34.

2010-11-January  Francesco Nori and Randaz <iron@liralab.it>
	* Stops sending both encoders if one fails (avoid troubles with coupled boards)
	* Current build 35.